--- a/templates/app/admin/auth/user/add_form.html
+++ b/templates/app/admin/auth/user/add_form.html
@@ -3,8 +3,8 @@
 
 {% block form_top %}
   {% if not is_popup %}
-    <p>{% trans "First, enter a username and password. Then, you'll be able to edit more user options." %}</p>
+    <p>{% trans "首先，输入用户名和密码。之后您就可以编辑更多的用户选项。" %}</p>
   {% else %}
-    <p>{% trans "Enter a username and password." %}</p>
+    <p>{% trans "输入用户名及密码" %}</p>
   {% endif %}
 {% endblock %}
