--- a/templates/app/admin/popup_response.html
+++ b/templates/app/admin/popup_response.html
@@ -1,6 +1,6 @@
 {% load i18n static %}<!DOCTYPE html>
 <html>
-  <head><title>{% trans 'Popup closing...(弹出关闭)' %}</title></head>
+  <head><title>{% trans '弹出关闭...' %}</title></head>
   <body>
     <script type="text/javascript"
             id="django-admin-popup-response-constants"
