--- a/templates/app/registration/password_change_form.html
+++ b/templates/app/registration/password_change_form.html
@@ -4,14 +4,14 @@
 {% block registration_content %}
     {% if form.errors %}
             <div class="alert alert-warning">
-            <p>{% blocktrans count form.errors.items|length as counter %}Please correct the error below.(请更正以下错误){% plural %}Please correct the errors below.(请更正以下错误){% endblocktrans %}</p>
+            <p>{% blocktrans count form.errors.items|length as counter %}请更正以下错误{% plural %}请更正以下错误{% endblocktrans %}</p>
         </div>
     {% endif %}
     <div>
     <form action="" method="post" class="form-horizontal">{% csrf_token %}
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10 text-info">
-                {% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly.(请输入旧密码，并重复输入新密码以验证您输入正确)" %}
+                {% trans "请输入旧密码，并重复输入新密码以验证您输入正确" %}
             </div>
         </div>
         {% for field in form %}
@@ -19,8 +19,8 @@
         {% endfor %}
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-              <button type="submit" class="btn btn-default">{% trans 'Change my password(更改密码)' %}</button>
-              &nbsp;<button type="reset" class="btn">{% trans 'Cancel(取消)' %}</button>
+              <button type="submit" class="btn btn-default">{% trans '更改密码' %}</button>
+              &nbsp;<button type="reset" class="btn">{% trans '取消' %}</button>
             </div>
         </div>
     </form>
