--- a/templates/app/registration/password_reset_confirm.html
+++ b/templates/app/registration/password_reset_confirm.html
@@ -6,26 +6,26 @@
         {% if form.errors %}
             <div class="alert alert-warning">
                 <a class="close" data-dismiss="alert" href="#">×</a>
-                <p>{% blocktrans count form.errors.items|length as counter %}Please correct the error below.(请更正以下错误){% plural %}Please correct the errors below.(请更正以下错误){% endblocktrans %}</p>
+                <p>{% blocktrans count form.errors.items|length as counter %}请更正以下错误{% plural %}请更正以下错误{% endblocktrans %}</p>
             </div>
         {% endif %}
         <form action="" method="post">{% csrf_token %}
             <div class="clearfix">
                 <div class="input">
-                    {% trans "Please enter your new password twice so we can verify you typed it in correctly.(请重复输入您的新密码，以验证您输入正确)" %}
+                    {% trans "请重复输入您的新密码，以验证您输入正确" %}
                 </div>
             </div>
             {% for field in form %}
                 {% include 'registration/form_field.html' %}
             {% endfor %}
             <div class="actions">
-                <input type="submit" class="btn btn-primary" value="{% trans 'Change My Password(更改密码)' %}">
+                <input type="submit" class="btn btn-primary" value="{% trans '更改密码' %}">
             </div>
         </form>
     {% else %}
-        <h3>{% trans 'Password Reset Failed(密码重置失败)' %}</h3>
+        <h3>{% trans '密码重置失败' %}</h3>
         <p>
-            {% trans "(密码重置链接失效，可能由于其已被使用。请重新请求更改密码。))The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
+            {% trans "密码重置链接失效，可能由于其已被使用。请重新请求更改密码。" %}
         </p>
     {% endif %}
 {% endblock %}
