--- a/templates/app/registration/password_reset_done.html
+++ b/templates/app/registration/password_reset_done.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 {% block registration_content %}
-    <h3>{% trans 'Password Reset Successful(密码重置成功)' %}</h3>
-    <p>{% trans "We have sent an e-mail with instructions for resetting your password. You should be receiving it shortly.(我们已经发送了一封电子邮件，里面有重置密码的说明。你应该很快就能收到)" %}</p>
+    <h3>{% trans '密码重置成功' %}</h3>
+    <p>{% trans "我们已经发送了一封电子邮件，里面有重置密码的说明。你应该很快就能收到" %}</p>
 {% endblock %}
