--- a/templates/app/registration/password_reset_form.html
+++ b/templates/app/registration/password_reset_form.html
@@ -4,7 +4,7 @@
 {% block registration_content %}
     {% if form.errors %}
         <div class="alert alert-warning">
-            <p>{% blocktrans count form.errors.items|length as counter %}Please correct the error below.(请更正以下错误){% plural %}Please correct the errors below.(请更正以下错误){% endblocktrans %}</p>
+            <p>{% blocktrans count form.errors.items|length as counter %}请更正以下错误{% plural %}请更正以下错误{% endblocktrans %}</p>
         </div>
     {% endif %}
     <form action="" method="post" class="form-horizontal">{% csrf_token %}
@@ -13,7 +13,7 @@
         {% endfor %}
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id='submit' class="btn btn-primary" type="submit" data-loading-text="{% trans 'loading(加载中)' %}..." accesskey="Enter">{% trans 'Reset My Password(重置密码)' %}</button>
+                <button id='submit' class="btn btn-primary" type="submit" data-loading-text="{% trans '加载中' %}..." accesskey="Enter">{% trans '重置密码' %}</button>
             </div>
         </div>
     </form>
