--- a/templates/app/admin/404.html
+++ b/templates/app/admin/404.html
@@ -1,12 +1,12 @@
 {% extends "admin/base_site.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Page not found' %}{% endblock %}
+{% block title %}{% trans '页面不存在' %}{% endblock %}
 
 {% block content %}
 
-<h2>{% trans 'Page not found' %}</h2>
+<h2>{% trans '页面不存在' %}</h2>
 
-<p>{% trans "We're sorry, but the requested page could not be found." %}</p>
+<p>{% trans "Sorry，您请求的页面不存在" %}</p>
 
 {% endblock %}
