--- a/templates/app/admin/500.html
+++ b/templates/app/admin/500.html
@@ -3,15 +3,15 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-&rsaquo; {% trans 'Server error' %}
+<a href="{% url 'admin:index' %}">{% trans '主页' %}</a>
+&rsaquo; {% trans '服务器错误'' %}
 </div>
 {% endblock %}
 
-{% block title %}{% trans 'Server error (500)' %}{% endblock %}
+{% block title %}{% trans '服务器错误 (500)' %}{% endblock %}
 
 {% block content %}
-<h1>{% trans 'Server Error <em>(500)</em>' %}</h1>
-<p>{% trans "There's been an error. It's been reported to the site administrators via email and should be fixed shortly. Thanks for your patience." %}</p>
+<h1>{% trans '服务器错误' <em>(500)</em>' %}</h1>
+<p>{% trans "服务器错误。它已经通过电子邮件报告给网站管理员，应该很快修复。请耐心等待。" %}</p>
 
 {% endblock %}
