--- a/templates/app/admin/auth/user/change_password.html
+++ b/templates/app/admin/auth/user/change_password.html
@@ -10,11 +10,11 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home(主页)' %}</a>
+<a href="{% url 'admin:index' %}">{% trans '主页' %}</a>
 &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
 &rsaquo; <a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
 &rsaquo; <a href="{% url opts|admin_urlname:'change' original.pk|admin_urlquote %}">{{ original|truncatewords:"18" }}</a>
-&rsaquo; {% trans 'Change password(更改密码))' %}
+&rsaquo; {% trans '更改密码' %}
 </div>
 {% endblock %}
 {% endif %}
@@ -24,11 +24,11 @@
 {% if is_popup %}<input type="hidden" name="_popup" value="1" />{% endif %}
 {% if form.errors %}
     <p class="errornote">
-    {% if form.errors.items|length == 1 %}{% trans "Please correct the error below.(请更正以下错误。)" %}{% else %}{% trans "Please correct the errors below.(请更正以下错误。)" %}{% endif %}
+    {% if form.errors.items|length == 1 %}{% trans "请更正以下错误：" %}{% else %}{% trans "请更正以下错误：" %}{% endif %}
     </p>
 {% endif %}
 
-<p>{% blocktrans with username=original %}Enter a new password for the user (为)<strong>{{ username }}(输入新密码)</strong>.{% endblocktrans %}</p>
+<p>{% blocktrans with username=original %}为<strong>{{ username }}输入新密码</strong>.{% endblocktrans %}</p>
 
 <fieldset class="module aligned">
 
@@ -51,7 +51,7 @@
 </fieldset>
 
 <div class="submit-row">
-<input type="submit" value="{% trans 'Change password(更改密码)' %}" class="default" />
+<input type="submit" value="{% trans '更改密码' %}" class="default" />
 </div>
 
 </div>
