--- a/templates/app/admin/change_form.html
+++ b/templates/app/admin/change_form.html
@@ -15,10 +15,10 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home(个人主页))' %}</a>
+<a href="{% url 'admin:index' %}">{% trans '主页' %}</a>
 &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
 &rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
-&rsaquo; {% if add %}{% blocktrans with name=opts.verbose_name %}Add {{ name }}{% endblocktrans %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+&rsaquo; {% if add %}{% blocktrans with name=opts.verbose_name %}添加{{ name }}{% endblocktrans %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
 </div>
 {% endblock %}
 {% endif %}
@@ -30,9 +30,9 @@
     {% block object-tools-items %}
     <li>
         {% url opts|admin_urlname:'history' original.pk|admin_urlquote as history_url %}
-        <a href="{% add_preserved_filters history_url %}" class="historylink">{% trans "History" %}</a>
+        <a href="{% add_preserved_filters history_url %}" class="historylink">{% trans "历史" %}</a>
     </li>
-    {% if has_absolute_url %}<li><a href="{{ absolute_url }}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif %}
+    {% if has_absolute_url %}<li><a href="{{ absolute_url }}" class="viewsitelink">{% trans "通过站点查看" %}</a></li>{% endif %}
     {% endblock %}
   </ul>
 {% endif %}{% endif %}
@@ -44,7 +44,7 @@
 {% if save_on_top %}{% block submit_buttons_top %}{% submit_row %}{% endblock %}{% endif %}
 {% if errors %}
     <p class="errornote">
-    {% if errors|length == 1 %}{% trans "Please correct the error below.(请更正以下错误)" %}{% else %}{% trans "Please correct the errors below.(请更正以下错误)" %}{% endif %}
+    {% if errors|length == 1 %}{% trans "请更正以下错误" %}{% else %}{% trans "请更正以下错误" %}{% endif %}
     </p>
     {{ adminform.form.non_field_errors }}
 {% endif %}
