--- a/templates/app/admin/change_list.html
+++ b/templates/app/admin/change_list.html
@@ -28,7 +28,7 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home(主页)' %}</a>
+<a href="{% url 'admin:index' %}">{% trans '主页' %}</a>
 &rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
 &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
 </div>
@@ -46,7 +46,7 @@
             <li>
               {% url cl.opts|admin_urlname:'add' as add_url %}
               <a href="{% add_preserved_filters add_url is_popup to_field %}" class="addlink">
-                {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
+                {% blocktrans with cl.opts.verbose_name as name %}添加{{ name }}{% endblocktrans %}
               </a>
             </li>
             {% endif %}
@@ -55,7 +55,7 @@
     {% endblock %}
     {% if cl.formset.errors %}
         <p class="errornote">
-        {% if cl.formset.total_error_count == 1 %}{% trans "Please correct the error below.(请更正以下错误。)" %}{% else %}{% trans "Please correct the errors below.(请更正以下错误。)" %}{% endif %}
+        {% if cl.formset.total_error_count == 1 %}{% trans "请更正以下错误。" %}{% else %}{% trans "请更正以下错误。" %}{% endif %}
         </p>
         {{ cl.formset.non_form_errors }}
     {% endif %}
@@ -66,7 +66,7 @@
       {% block filters %}
         {% if cl.has_filters %}
           <div id="changelist-filter">
-            <h2>{% trans 'Filter(过滤器)' %}</h2>
+            <h2>{% trans '过滤' %}</h2>
             {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
           </div>
         {% endif %}
