--- a/templates/app/admin/includes/object_delete_summary.html
+++ b/templates/app/admin/includes/object_delete_summary.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<h2>{% trans "Summary(概要)" %}</h2>
+<h2>{% trans "概要" %}</h2>
 <ul>
     {% for model_name, object_count in model_count %}
     <li>{{ model_name|capfirst }}: {{ object_count }}</li>
