--- a/templates/app/admin/index.html
+++ b/templates/app/admin/index.html
@@ -17,7 +17,7 @@
         <div class="app-{{ app.app_label }} module">
         <table>
         <caption>
-            <a href="{{ app.app_url }}" class="section" title="{% blocktrans with name=app.name %}Models in the {{ name }} (应用中的模型)application{% endblocktrans %}">{{ app.name }}</a>
+            <a href="{{ app.app_url }}" class="section" title="{% blocktrans with name=app.name %}{{ name }}模型中的应用{% endblocktrans %}">{{ app.name }}</a>
         </caption>
         {% for model in app.models %}
             <tr class="model-{{ model.object_name|lower }}">
@@ -28,13 +28,13 @@
             {% endif %}
 
             {% if model.add_url %}
-                <td><a href="{{ model.add_url }}" class="addlink">{% trans 'Add(添加)' %}</a></td>
+                <td><a href="{{ model.add_url }}" class="addlink">{% trans '添加' %}</a></td>
             {% else %}
                 <td>&nbsp;</td>
             {% endif %}
 
             {% if model.admin_url %}
-                <td><a href="{{ model.admin_url }}" class="changelink">{% trans 'Change(更改)' %}</a></td>
+                <td><a href="{{ model.admin_url }}" class="changelink">{% trans '更改' %}</a></td>
             {% else %}
                 <td>&nbsp;</td>
             {% endif %}
@@ -44,7 +44,7 @@
         </div>
     {% endfor %}
 {% else %}
-    <p>{% trans "You don't have permission to edit anything.(权限不足)）" %}</p>
+    <p>{% trans "权限不足！" %}</p>
 {% endif %}
 </div>
 {% endblock %}
@@ -52,12 +52,12 @@
 {% block sidebar %}
 <div id="content-related">
     <div class="module" id="recent-actions-module">
-        <h2>{% trans 'Recent actions(历史操作)' %}</h2>
-        <h3>{% trans 'My actions(我的历史操作)' %}</h3>
+        <h2>{% trans '历史操作' %}</h2>
+        <h3>{% trans '我的历史操作' %}</h3>
             {% load log %}
             {% get_admin_log 10 as admin_log for_user user %}
             {% if not admin_log %}
-            <p>{% trans 'None available(无)' %}</p>
+            <p>{% trans '无' %}</p>
             {% else %}
             <ul class="actionlist">
             {% for entry in admin_log %}
@@ -71,7 +71,7 @@
                 {% if entry.content_type %}
                     <span class="mini quiet">{% filter capfirst %}{{ entry.content_type }}{% endfilter %}</span>
                 {% else %}
-                    <span class="mini quiet">{% trans 'Unknown content(未知内容)' %}</span>
+                    <span class="mini quiet">{% trans '未知内容' %}</span>
                 {% endif %}
             </li>
             {% endfor %}
