--- a/templates/app/admin/invalid_setup.html
+++ b/templates/app/admin/invalid_setup.html
@@ -3,11 +3,11 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home(主页)' %}</a>
+<a href="{% url 'admin:index' %}">{% trans '主页' %}</a>
 &rsaquo; {{ title }}
 </div>
 {% endblock %}
 
 {% block content %}
-<p>{% trans "(数据库安装出现问题，请确认数据库表单创建无误，并能被用户访问到)Something's wrong with your database installation. Make sure the appropriate database tables have been created, and make sure the database is readable by the appropriate user." %}</p>
+<p>{% trans "数据库安装出现问题，请确认数据库表单创建无误，并能被用户访问到。" %}</p>
 {% endblock %}
