--- a/templates/app/admin/related_widget_wrapper.html
+++ b/templates/app/admin/related_widget_wrapper.html
@@ -5,22 +5,22 @@
         {% if can_change_related %}
         <a class="related-widget-wrapper-link change-related" id="change_id_{{ name }}"
             data-href-template="{{ change_related_template_url }}?{{ url_params }}"
-            title="{% blocktrans %}Change selected {{ model }}{% endblocktrans %}">
-            <img src="{% static 'admin/img/icon-changelink.svg' %}" alt="{% trans 'Change(更改)' %}"/>
+            title="{% blocktrans %}更改所选模型：{{ model }}{% endblocktrans %}">
+            <img src="{% static 'admin/img/icon-changelink.svg' %}" alt="{% trans '更改' %}"/>
         </a>
         {% endif %}
         {% if can_add_related %}
         <a class="related-widget-wrapper-link add-related" id="add_id_{{ name }}"
             href="{{ add_related_url }}?{{ url_params }}"
-            title="{% blocktrans %}Add another {{ model }}{% endblocktrans %}">
-            <img src="{% static 'admin/img/icon-addlink.svg' %}" alt="{% trans 'Add(添加)' %}"/>
+            title="{% blocktrans %}添加模型：{{ model }}{% endblocktrans %}">
+            <img src="{% static 'admin/img/icon-addlink.svg' %}" alt="{% trans '添加' %}"/>
         </a>
         {% endif %}
         {% if can_delete_related %}
         <a class="related-widget-wrapper-link delete-related" id="delete_id_{{ name }}"
             data-href-template="{{ delete_related_template_url }}?{{ url_params }}"
-            title="{% blocktrans %}Delete selected {{ model }}{% endblocktrans %}">
-            <img src="{% static 'admin/img/icon-deletelink.svg' %}" alt="{% trans 'Delete(删除)' %}"/>
+            title="{% blocktrans %}删除所选模型：{{ model }}{% endblocktrans %}">
+            <img src="{% static 'admin/img/icon-deletelink.svg' %}" alt="{% trans '删除' %}"/>
         </a>
         {% endif %}
     {% endblock %}
