--- a/templates/app/registration/logged_out.html
+++ b/templates/app/registration/logged_out.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 {% block registration_content %}
-    <h3>{% trans "You have been logged out.()您已登出" %}</h3>
-    <p><a href="{% url 'login' %}">{% trans 'Log In(登录)' %}</a></p>
+    <h3>{% trans "您已登出" %}</h3>
+    <p><a href="{% url 'login' %}">{% trans '登录' %}</a></p>
 {% endblock %}
