--- a/templates/app/registration/password_change_done.html
+++ b/templates/app/registration/password_change_done.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 {% block registration_content %}
-    <h3>{% trans 'Password Changed Successfully(更改密码成功)' %}</h3>
-    <p><a href="/">{% trans 'Back(返回)' %}</a></p>
+    <h3>{% trans '更改密码成功' %}</h3>
+    <p><a href="/">{% trans '返回' %}</a></p>
 {% endblock %}
