--- a/templates/app/registration/password_reset_complete.html
+++ b/templates/app/registration/password_reset_complete.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 {% block registration_content %}
-    <h3>{% trans 'Password Reset Complete(密码重置完毕)' %}</h3>
-    <p>{% trans "Your password has been set.  You can log in now.(您的密码已重置。请重新登录))" %}</p>
+    <h3>{% trans '密码重置完毕' %}</h3>
+    <p>{% trans "您的密码已重置，请重新登录。" %}</p>
 {% endblock %}
